# version is one sourced from __init__

[metadata]
name = robo-clocks
version = attr: roboclocks.__version__ 
author = Mike Knerr
#author_email = name@domain.com
description =  Clocks, timing, and timestamping for mobile robotics
long_description = file: README.md
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# pypi index project page needs this vers of homepage
home_page = https://github.com/mkner/robo-clocks
readme = "README.md"
keywords = mobile robotics, time, time sync, timestamps, clocks, system clocks, uptime clocks, sync clocks, RFC-3339, (ISO 8601)
#keywords = python, packages
license =   MIT
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   
[options]
packages = find:
#install_requires =
#    robo-base >= 0.1.3

[options.packages.find]
include = roboutils*
